# astrotivissa-blogpost

./: .gitignore  Dockerfile  README.md  VERSION  requirements.txt
astrotivissa_blogpost_rust/: Cargo.toml
astrotivissa_blogpost_rust/data/: processed_videos.json
astrotivissa_blogpost_rust/src/: lib.rs  main.rs  models.rs
astrotivissa_blogpost_rust/src/gemini/: mod.rs
astrotivissa_blogpost_rust/src/persistence/: mod.rs
astrotivissa_blogpost_rust/src/wordpress/: mod.rs
astrotivissa_blogpost_rust/src/youtube/: mod.rs
data/: processed_videos.json
src/: __init__.py  blog_post.py  main.py  text_summary.py  text_summary_gemini.py  video_watcher.py  wordpress_auth.py  youtube_transcript.py
tests/: test_video_watcher.py
