[package]
name = "astrotivissa_blogpost_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.27", features = ["full"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
youtube-transcript = "0.3.2"
